--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -20,8 +20,8 @@
   color-scheme: light;
 
   --color-base-content: "#000";
-  --color-primary: "#16A34A";
-  --color-primary-content: "#fff";
+  --color-primary: "#2BFFFF";
+  --color-primary-content: "#D40000";
   --color-accent: "#2C5779";
   --color-accent-content: oklch(98% 0.01 160);
 }
