小海報資訊系統正式上線第一版
Version1 基礎功能

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -20,7 +20,7 @@
   color-scheme: light;
 
   --color-base-content: "#000";
-  --color-primary: "#2BFFFF";
+  --color-primary: "#D2FAFF";
   --color-primary-content: "#D40000";
   --color-accent: "#2C5779";
   --color-accent-content: oklch(98% 0.01 160);
